switch out script files

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="app.js"></script>
+    <script src="hangman.js"></script>
 </body>
 </html>
