--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
+   
+    <div id="word"></div>
+    <div id="remaining"></div>
     <script src="hangman.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
