--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
    
     <div id="word"></div>
-    <div id="remaining"></div>
+    <div id="message"></div>
     <script src="hangman.js"></script>
     <script src="app.js"></script>
 </body>
