--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
    
     <div id="word"></div>
     <div id="message"></div>
+    <button id="reset">Reset</button>
     <script src="requests.js"></script>
     <script src="hangman.js"></script>
     <script src="app.js"></script>
