--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/styles.css">
-    <title>Hangman</title>
-</head>
-<body>
-   
-    <div id="word"></div>
-    <div id="message"></div>
-    <button id="reset">Reset</button>
-    <script src="/scripts/requests.js"></script>
-    <script src="/scripts/hangman.js"></script>
-    <script src="/scripts/app.js"></script>
-</body>
+   <head>
+      <meta charset="UTF-8" />
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <link rel="stylesheet" href="/styles/styles.css" />
+      <link href="/images/favicon.png" rel="icon" />
+      <title>Hangman</title>
+   </head>
+   <body>
+      <div>
+         <div class="puzzle" id="word"></div>
+         <p id="message"></p>
+         <button id="reset" class="button">Reset</button>
+      </div>
+
+      <script src="/scripts/requests.js"></script>
+      <script src="/scripts/hangman.js"></script>
+      <script src="/scripts/app.js"></script>
+   </body>
 </html>
