--- a/index.html
+++ b/index.html
@@ -5,15 +5,18 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <link rel="stylesheet" href="/styles/styles.css" />
-      <link href="/images/favicon.png" rel="icon" />
+      <link href="./images/favicon.png" rel="icon" />
       <title>Hangman</title>
    </head>
-   <body>
-      <div>
-         <div class="puzzle" id="word"></div>
-         <p id="message"></p>
-         <button id="reset" class="button">Reset</button>
+   <body class="container">
+      <header class="header"></header>
+      <div class="main">
+         <p class="main__puzzle" id="word"></p>
+         <p class="main__message" id="message"></p>
+         <button class="main__button" id="reset" >Reset</button>
       </div>
+
+      <input class="input" id="input" type="text">
 
       <script src="/scripts/requests.js"></script>
       <script src="/scripts/hangman.js"></script>
