line break in js w js media query

--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
       <header class="header"></header>
       <div class="main">
          <p class="main__puzzle" id="word"></p>
-         <p class="main__message" id="message"></p>
-         <button class="main__button" id="reset" >Reset</button>
+         <p class="main__message" id="message"></p> 
       </div>
-
+      <button class="button" id="reset" >Reset</button>
       <input class="input" id="input" type="text">
+
+     
 
       <script src="/scripts/requests.js"></script>
       <script src="/scripts/hangman.js"></script>
